# opengl-samples

./: CMakeLists.txt  README.md
src/: fragment_variables.c  glBlendEquation.c  glBlendEquationSeparate.c  glBlendFunc.c  glBlendFuncSelected.c  glBlendFuncSeparate.c  glGetError.c  glsl_limits_test.c  qualifiers.c  vertex_variables.c
